main: ensure clients list wraps on small screen sizes

--- a/components/ClientList/ClientList.module.scss
+++ b/components/ClientList/ClientList.module.scss
@@ -3,4 +3,5 @@
 .clients {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
